--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <title>Nguyen Ivkovic</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/8ff3fbe732.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <i class="fa-brands fa-github-alt fa-xl"></i>
     <nav id="navbar">
       <button>About</button>
       <button>Projects</button>
@@ -16,8 +18,9 @@
     </section>
 
     <section id="projects">
-    <div class="project-tile">Add a tile and a link inside this div
-    </div>
+      <div class="project-tile">View my Projects
+        <i href="https://github.com/angiephantastic/RecipePage" class="fa-brands fa-github-alt fa-xl"></i>
+      </div>
     </section>
 
     <section>
