--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section id="projects">
       <div class="project-tile">View my Projects
-        <i href="https://github.com/angiephantastic/RecipePage" class="fa-brands fa-github-alt fa-xl"></i>
+        <a href="https://github.com/angiephantastic/RecipePage"><i class="fa-brands fa-github-alt fa-xl" target="_blank" style="color:black;"></i></a>
       </div>
     </section>
 
