Nested <button> inside <a> and added css file. Added file links.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
   </head>
   <body>
     <nav id="navbar">
-      <button>About</button>
-      <button>Projects</button>
-      <button>My Resume</button>
-      <button>Contact</button>
+      <a href="welcome-section">
+        <button>About</button></a>
+      <a href="projects">
+        <button>Projects</button></a>
+      <a href="">
+        <button>My Resume</button></a>
+      <!--add a link to PDF file-->
+      <a>
+        <button>Contact</button></a>
+      <!--link to contact info at the footer-->
     </nav>
     <section id="welcome-section">
     <h1>Welcome to my personal Portfolio. I am Nguyen Ivkovic and I am glad that you are here.</h1>
@@ -22,9 +28,9 @@
       </div>
     </section>
 
-    <section>
-      <a>Github</a>
-      <a>freeCodeCamp</a>
+    <section id="profile-link">
+      <a href="https://github.com/angiephantastic" target="_blank">Github</a>
+      <a href="https://www.freecodecamp.org/angiephantastic" target="_blank">freeCodeCamp</a>
     </section>
   </body>
 </html>
