--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <button>About</button></a>
       <a href="projects">
         <button>Projects</button></a>
-      <a href="">
+      <a href="https://drive.google.com/file/d/12yDP-4ZjxGU_RyBd2AzDWZyHav_MLG2q/view?usp=drive_link">
         <button>My Resume</button></a>
       <!--add a link to PDF file-->
       <a>
