--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   </head>
   <body>
     <nav id="navbar">
-      <a href="welcome-section">
+      <a href="#welcome-section">
         <button>About</button></a>
-      <a href="projects">
+      <a href="#projects">
         <button>Projects</button></a>
-      <a href="https://drive.google.com/file/d/12yDP-4ZjxGU_RyBd2AzDWZyHav_MLG2q/view?usp=drive_link">
+      <a href="https://drive.google.com/file/d/12yDP-4ZjxGU_RyBd2AzDWZyHav_MLG2q/view?usp=drive_link" target="_blank">
         <button>My Resume</button></a>
-      <!--add a link to PDF file-->
       <a>
         <button>Contact</button></a>
       <!--link to contact info at the footer-->
