Adjusted color. Replaced links with icons.

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <section id="welcome-section">
     <h1>Welcome to my personal Portfolio. I am Nguyen Ivkovic and I am glad that you are here.</h1>
     </section>
-
+    <hr>
     <section id="projects">
       <div class="project-tile">View my Projects
         <a href="https://github.com/angiephantastic/RecipePage"><i class="fa-brands fa-github-alt fa-xl" target="_blank" style="color:black;"></i></a>
       </div>
     </section>
 
-    <section id="profile-link">
-      <a href="https://github.com/angiephantastic" target="_blank">Github</a>
-      <a href="https://www.freecodecamp.org/angiephantastic" target="_blank">freeCodeCamp</a>
+    <section id="profile-link">Visit my Profiles
+      <a href="https://github.com/angiephantastic"><i class="fa-brands fa-github-alt fa-xl" target="_blank" style="color:black;"></i></a>
+      <a href="https://www.freecodecamp.org/angiephantastic"><i class="fa-brands fa-free-code-camp fa-xl" target="_blank" style="color:black;"></i></a>
     </section>
   </body>
 </html>
