Styled bottom line break. Added LinkedIn link.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     <hr>
     <section id="projects">
       <div class="project-tile">View my Projects
-        <a href="https://github.com/angiephantastic/RecipePage"><i class="fa-brands fa-github-alt fa-xl" target="_blank" style="color:black;"></i></a>
+        <a href="https://github.com/angiephantastic/RecipePage"target="_blank"><i class="fa-brands fa-github-alt fa-xl"style="color:black;"></i></a>
       </div>
     </section>
 
     <section id="profile-link">Visit my Profiles
-      <a href="https://github.com/angiephantastic"><i class="fa-brands fa-github-alt fa-xl" target="_blank" style="color:black;"></i></a>
-      <a href="https://www.freecodecamp.org/angiephantastic"><i class="fa-brands fa-free-code-camp fa-xl" target="_blank" style="color:black;"></i></a>
+      <a href="https://github.com/angiephantastic" target="_blank"><i class="fa-brands fa-github-alt fa-xl" style="color:black;"></i></a>
+      <a href="https://www.freecodecamp.org/angiephantastic"target="_blank"><i class="fa-brands fa-free-code-camp fa-xl"style="color:black;"></i></a>
+      <a href="https://www.linkedin.com/in/nguyen-ivkovic-571539356/" target="_blank"><i class="fa-brands fa-linkedin-in fa-xl" style="color:black;"></i></a>
     </section>
   </body>
 </html>
