Added profile pic

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
         <button>Contact</button></a>
       <!--link to contact info at the footer-->
     </nav>
-    <section id="welcome-section">
-    <h1>Welcome to my personal Portfolio. I am Nguyen Ivkovic and I am glad that you are here.</h1>
-    </section>
+    <main> <!---Think about what and how many content boxes to put inside this container. (profile-pic, about, prof skills, soft skills, hobbies, certificates(links or display thumbnails), current tasks,...then orginize them into the grid layout)-->>
+      <section id="welcome-section">
+        <img src="C:\Users\Angie\Pictures\LinkedInPhoto.jpg" id="profile-pic">
+        <h1>Welcome to my personal Portfolio. I am Nguyen Ivkovic and I am glad that you are here.</h1>
+        </section>
+    </main>
     <hr>
     <section id="projects">
       <div class="project-tile">View my Projects
