Update index.html - corrected typo
Signed-off-by: Nguyen Ivkovic <nguyen.ivkovic@gmail.com>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <main> <!---Think about what and how many content boxes to put inside this container. (profile-pic, about, prof skills, soft skills, hobbies, certificates(links or display thumbnails), current tasks,...then orginize them into the grid layout)-->>
       <section id="welcome-section">
-        <img src="https://raw.githubusercontent.com/angiephantastic/Nguyen/911cbc330a5682df24e9b4d8e3d06a3c567dc9f1/IMG_0620.jpg" id="profile-pic">
+        <img src="https://raw.githubusercontent.com/angiephantastic/Nguyen/911cbc330a5682df24e9b4d8e3d06a3c567dc9f1/IMG_0620" id="profile-pic">
         <h1>Welcome to my personal Portfolio. I am Nguyen Ivkovic and I am glad that you are here.</h1>
         </section>
     </main>
