Implemented grid. Added sections and some contents.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,27 @@
         <button>Contact</button></a>
       <!--link to contact info at the footer-->
     </nav>
-    <main> <!---Think about what and how many content boxes to put inside this container. (profile-pic, about, prof skills, soft skills, hobbies, certificates(links or display thumbnails), current tasks,...then orginize them into the grid layout)-->>
+    <main> <!---Think about what and how many content boxes to put inside this container. (profile-pic, about, prof skills, soft skills, hobbies, certificates(links or display thumbnails), current tasks,...then orginize them into the grid layout)-->
       <section id="welcome-section">
-        <img src="C:\Users\Angie\Pictures\LinkedInPhoto.jpg" id="profile-pic">
-        <h1>Welcome to my personal Portfolio. I am Nguyen Ivkovic and I am glad that you are here.</h1>
+        <img src="https://raw.githubusercontent.com/angiephantastic/Nguyen/911cbc330a5682df24e9b4d8e3d06a3c567dc9f1/IMG_0620.jpg" id="profile-pic">
+        <h1>Hi! Im Nguyen Ivkovic. Welcome to my personal Portfolio.</h1>
+        </section>
+        <section id="intro">
+          <h1>Introduction</h1>
+          <p>I am currently working as an account coordinator for an office in California.
+            I am a programing enthusiast and I would like to change my career and become a Web Developer.
+            My free time is spent teaching yoga and playing with my dog. 
+          </p>
+        </section>
+        <section id="skills">
+          <h1>Professional skills</h1>
+          <p></p>
+        </section>
+        <section id="hobbies">
+          <h1> SOME OTHER PLACE HOLDER TEXT</h1>
+        </section>
+        <section id="certs">
+          <h1> SOME OTHER PLACE HOLDER TEXT</h1>
         </section>
     </main>
     <hr>
