Added contents and info

--- a/index.html
+++ b/index.html
@@ -25,19 +25,42 @@
         <section id="intro">
           <h1>Introduction</h1>
           <p>I am currently working as an account coordinator for an office in California.
-            I am a programing enthusiast and I would like to change my career and become a Web Developer.
-            My free time is spent teaching yoga and playing with my dog. 
+            I am a programing enthusiast and I am working toward changing my career to become a Web Developer.
+            I also teaching yoga in my free time and I find it very full filling. 
           </p>
         </section>
         <section id="skills">
           <h1>Professional skills</h1>
-          <p></p>
+          <ul>
+            <li>HTML</li>
+            <li>JavaScript</li>
+            <li>CSS and Responsive Web Framework</li>
+            <li>SQL & MongoDB</li>
+            <li>General Accounting Knowledge</li>
+          </ul>
+          <h1>Personal skills</h1>
+          <ul>
+            <li>Team work and Communication</li>
+            <li>Attention to Detail - I am a control freak and I am working managing it.</li>
+            <li>Knowledge in English(Native), German(A2) and Vietnamese(First Language)</li>
+            <li>I enjoy learning new things and I always strive for improvements.</li>
+          </ul>
         </section>
         <section id="hobbies">
-          <h1> SOME OTHER PLACE HOLDER TEXT</h1>
+          <h1> Hobbies</h1>
+          <ul>
+            <li>Yoga</li>
+            <li>CrossFit</li>
+            <li>My Dog Daisy</li>
+            <li>Cooking</li>
+            <li>Traveling</li>
+            <li>Reading - especially Psychology books</li>
+            <li>Music Festivals</li>
+            <li>Skiing</li>
+          </ul>
         </section>
         <section id="certs">
-          <h1> SOME OTHER PLACE HOLDER TEXT</h1>
+          <h1>My Certificates</h1>
         </section>
     </main>
     <hr>
