Editted footer. Added grid columns length.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <main> <!---Think about what and how many content boxes to put inside this container. (profile-pic, about, prof skills, soft skills, hobbies, certificates(links or display thumbnails), current tasks,...then orginize them into the grid layout)-->
       <section id="welcome-section">
         <img src="https://raw.githubusercontent.com/angiephantastic/Nguyen/911cbc330a5682df24e9b4d8e3d06a3c567dc9f1/IMG_0620.jpg" id="profile-pic">
-        <h1>Hi! Im Nguyen Ivkovic. Welcome to my personal Portfolio.</h1>
+        <h1>Hi! Im Nguyen Ivkovic.</h1>
         </section>
         <section id="intro">
           <h1>Introduction</h1>
           <p>I am currently working as an account coordinator for an office in California.
             I am a programing enthusiast and I am working toward changing my career to become a Web Developer.
-            I also teaching yoga in my free time and I find it very full filling. 
+            I also teaching yoga in my free time. 
           </p>
         </section>
         <section id="skills">
@@ -64,16 +64,10 @@
         </section>
     </main>
     <hr>
-    <section id="projects">
-      <div class="project-tile">View my Projects
-        <a href="https://github.com/angiephantastic/RecipePage"target="_blank"><i class="fa-brands fa-github-alt fa-xl"style="color:black;"></i></a>
-      </div>
-    </section>
-
-    <section id="profile-link">Visit my Profiles
+    <section id="profile-link">
       <a href="https://github.com/angiephantastic" target="_blank"><i class="fa-brands fa-github-alt fa-xl" style="color:black;"></i></a>
-      <a href="https://www.freecodecamp.org/angiephantastic"target="_blank"><i class="fa-brands fa-free-code-camp fa-xl"style="color:black;"></i></a>
-      <a href="https://www.linkedin.com/in/nguyen-ivkovic-571539356/" target="_blank"><i class="fa-brands fa-linkedin-in fa-xl" style="color:black;"></i></a>
+      <a href="https://www.freecodecamp.org/angiephantastic"target="_blank"><i class="fa-brands fa-free-code-camp fa-xl"style="color:white;"></i></a>
+      <a href="https://www.linkedin.com/in/nguyen-ivkovic-571539356/" target="_blank"><i class="fa-brands fa-linkedin-in fa-xl" style="color:#0A66C2;"></i></a>
     </section>
   </body>
 </html>
