Changed file icon

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
           <h1>My Certificates</h1>
           My Yoga Instructor Certificate
           <a href="https://drive.google.com/file/d/1qMLVOnIz3uJvqcc2FQ6Ofd9rsi0YX2Ts/view?usp=drive_link"target="_blank">
-            <i class="fa-regular fa-file fa-xl" style="color:#fdffab"></i>
+            <i class="fa-regular fa-file-lines fa-xl" style="color:#fdffab"></i>
           </a>
           <br>
           My Web Developer Certificate
           <a href="https://drive.google.com/file/d/1j6RbVheuQUaKu5WK667kNaBnQdcq-jQY/view?usp=drive_link"target="_blank">
-            <i class="fa-regular fa-file fa-xl" style="color:#fdffab"></i>
+            <i class="fa-regular fa-file-lines fa-xl" style="color:#fdffab"></i>
           </a>
         </section>
     </main>
