--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h1>Introduction</h1>
           <p>I am currently working as an account coordinator for an office in California.
             I am a programing enthusiast and I am working toward changing my career to become a Web Developer.
-            I also teaching yoga in my free time. 
+            I also teach yoga in my free time. 
           </p>
         </section>
         <section id="skills">
@@ -61,12 +61,11 @@
         </section>
         <section id="certs">
           <h1>My Certificates</h1>
-          My Yoga Instructor Certificate
+          <p>My Yoga Instructor Certificate</p>
           <a href="https://drive.google.com/file/d/1qMLVOnIz3uJvqcc2FQ6Ofd9rsi0YX2Ts/view?usp=drive_link"target="_blank">
             <i class="fa-regular fa-file-lines fa-xl" style="color:#fdffab"></i>
           </a>
-          <br>
-          My Web Developer Certificate
+          <p>My Web Developer Certificate</p>
           <a href="https://drive.google.com/file/d/1j6RbVheuQUaKu5WK667kNaBnQdcq-jQY/view?usp=drive_link"target="_blank">
             <i class="fa-regular fa-file-lines fa-xl" style="color:#fdffab"></i>
           </a>
