--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <button>My Resume</button></a>
       <a>
         <button>Contact</button></a>
-      <!--link to contact info at the footer-->
     </nav>
-    <main> <!---Think about what and how many content boxes to put inside this container. (profile-pic, about, prof skills, soft skills, hobbies, certificates(links or display thumbnails), current tasks,...then orginize them into the grid layout)-->
+    <main>
       <section id="welcome-section">
         <img src="https://raw.githubusercontent.com/angiephantastic/Nguyen/911cbc330a5682df24e9b4d8e3d06a3c567dc9f1/IMG_0620.jpg" id="profile-pic">
         <h1>Hi! Im Nguyen Ivkovic.</h1>
@@ -41,7 +40,7 @@
           <h1>Personal skills</h1>
           <ul>
             <li>Team work and Communication</li>
-            <li>Attention to Detail - I am a control freak and I am working managing it.</li>
+            <li>Attention to Detail - I am a control freak and I am working on managing it.</li>
             <li>Knowledge in English(Native), German(A2) and Vietnamese(First Language)</li>
             <li>I enjoy learning new things and I always strive for improvements.</li>
           </ul>
@@ -60,12 +59,12 @@
           </ul>
         </section>
         <section id="certs">
-          <h1>My Certificates</h1>
-          <p>My Yoga Instructor Certificate</p>
+          <h1>Certificates</h1>
+          <p>Yoga Instructor Certificate</p>
           <a href="https://drive.google.com/file/d/1qMLVOnIz3uJvqcc2FQ6Ofd9rsi0YX2Ts/view?usp=drive_link"target="_blank">
             <i class="fa-regular fa-file-lines fa-xl" style="color:#fdffab"></i>
           </a>
-          <p>My Web Developer Certificate</p>
+          <p>Web Developer Certificate</p>
           <a href="https://drive.google.com/file/d/1j6RbVheuQUaKu5WK667kNaBnQdcq-jQY/view?usp=drive_link"target="_blank">
             <i class="fa-regular fa-file-lines fa-xl" style="color:#fdffab"></i>
           </a>
